[gd_scene load_steps=9 format=3 uid="uid://3p2ux16007x0"]

[ext_resource type="Script" path="res://Scenes/Characters/Challengers/vampire.gd" id="1_hmvp6"]
[ext_resource type="Texture2D" uid="uid://uv5c7kg1wyrx" path="res://Graphics/Challengers/Dungeon_Enemy_v2.png" id="2_oabd7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csnxy"]
size = Vector2(13, 91)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3r7fs"]
size = Vector2(13, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbkyo"]
size = Vector2(13, 51)

[sub_resource type="CircleShape2D" id="CircleShape2D_6vo3e"]
radius = 269.268

[sub_resource type="Animation" id="Animation_sidrx"]
resource_name = "Idle"
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0523599, 0.10472, 0.15708, 0.10472, 0.0523599, 0.0, -0.0523599, -0.10472, -0.15708, -0.10472, -0.0523599]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grwag"]
_data = {
"Idle": SubResource("Animation_sidrx")
}

[node name="Vampire" type="CharacterBody2D" groups=["Challenger"]]
collision_layer = 2
collision_mask = 151
script = ExtResource("1_hmvp6")
startingHealth = 40
scaleFactor = 1.0

[node name="DoorBlocker" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_csnxy")

[node name="TakeDamageCollider" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_3r7fs")

[node name="Area2D" type="Area2D" parent="."]

[node name="BodyCollider" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_wbkyo")

[node name="NoticeArea" type="Area2D" parent="."]

[node name="NoticeAreaCollider" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_6vo3e")

[node name="CharacterImage" type="Sprite2D" parent="."]
texture = ExtResource("2_oabd7")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterImage"]
libraries = {
"": SubResource("AnimationLibrary_grwag")
}
autoplay = "Idle"

[node name="BitingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="BitingTimer" to="." method="_on_biting_timer_timeout"]
